// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/menu-items/MenuItemForm Default Default 1`] = `
<div
  class="container white"
>
  <div
    class="v-card v-sheet theme--light"
    style="background-color: rgb(229, 229, 229);"
  >
    <div
      class="v-card__title"
    >
      <h3
        class="grey--text"
      >
        
      Add menu new item
    
      </h3>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs8 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Item Title
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  placeholder="Enter menu item title"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        servings
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Cost
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs12 px-2"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Description
      
        </div>
         
        <div
          class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <textarea
                  rows="5"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <span
                  class="v-messages__wrapper"
                  name="message-transition"
                  tag="div"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="v-card__actions pa-2 d-flex"
    >
      <div>
        <button
          class="v-btn v-btn--disabled v-btn--depressed theme--light grey--text"
          disabled="disabled"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Cancel
      
          </div>
        </button>
         
        <button
          class="v-btn v-btn--depressed theme--light primary"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Save changes
      
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/menu-items/MenuItemForm Default WithData 1`] = `
<div
  class="container white"
>
  <div
    class="white v-card v-sheet theme--light"
    style="background-color: rgb(229, 229, 229);"
  >
    <div
      class="v-card__title"
    >
      <h3
        class="grey--text"
      >
        
      Add menu new item
    
      </h3>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs8 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Item Title
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  placeholder="Enter menu item title"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        servings
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Cost
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs12 px-2"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Description
      
        </div>
         
        <div
          class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <textarea
                  rows="5"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <span
                  class="v-messages__wrapper"
                  name="message-transition"
                  tag="div"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="v-card__actions pa-2 d-flex"
    >
      <div>
        <button
          class="v-btn v-btn--disabled v-btn--depressed theme--light grey--text"
          disabled="disabled"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Cancel
      
          </div>
        </button>
         
        <button
          class="v-btn v-btn--depressed theme--light primary"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Save changes
      
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
